--- a/登录页动态头像/header-icon-animation.html
+++ b/登录页动态头像/header-icon-animation.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="./style1.css">
 </head>
 <body>
+    <!-- 图片来自npm.com -->
     <div class="wrapper">
         <div class="headicon">
             <div class="headAnimation">
                 <img class="imgBody" src="./header.png" alt="header-icon">
-                <img class="imgFace" src="./headerface.png" alt="header-icon">
+                <img class="imgFace" src="./headerface1.png" alt="header-icon">
             </div>
         </div>
     </div>
