--- a/tools/index.html
+++ b/tools/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="main">
-        <div class="transColor">
+        <div class="transColor tools">
             <div class="transColorDec">
                 <div class="transColorDecInput">
                     <p>RGB (</p>
@@ -48,6 +48,18 @@
                 </div>
             </div>
                     
+        </div>
+
+        <div class="tool2 tools">
+            <p>Tool2</p>
+        </div>
+
+        <div class="tool3 tools">
+            <p>Tool3</p>
+        </div>
+
+        <div class="tool4 tools">
+            <p>Tool4</p>
         </div>
     </div>
 </body>
